--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PW - Aula sobre GIT </title>
+    <link rel="stylesheet" href="bootstrap.css">
 </head>
 
 <body>
@@ -13,5 +14,8 @@
     <h1> Ola pessual !!! </h1>
 
 </body>
+
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/bootstrap.js"></script>
 
 </html>
