--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> PW - Aula sobre GIT </title>
-    <link rel="stylesheet" href="bootstrap.css">
+    <title> PW - bootstrap </title>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
 
-    <h1> Ola pessual !!! </h1>
+    <div class="div container">
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, corrupti hic reprehenderit delectus et quas asperiores suscipit facilis nulla accusantium nesciunt sint facere. Esse, quis non explicabo consectetur doloremque ex.</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
 <script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </html>
