--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="div container">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, corrupti hic reprehenderit delectus et quas asperiores suscipit facilis nulla accusantium nesciunt sint facere. Esse, quis non explicabo consectetur doloremque ex.</p>
+                <p>Lorem ichihime ipsum dolor sit amet consectetur adipisicing elit. Dicta, corrupti hic reprehenderit delectus et quas asperiores suscipit facilis nulla accusantium nesciunt sint facere. Esse, quis non explicabo consectetur doloremque ex.</p>
             </div>
         </div>
     </div>
