--- a/index.html
+++ b/index.html
@@ -7,21 +7,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PW - bootstrap </title>
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-    <div class="div container">
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-4">
-                <p>Lorem jj ipsum dolor sit amet consectetur adipisicing elit. Dicta, corrupti hic reprehenderit delectus et quas asperiores suscipit facilis nulla accusantium nesciunt sint facere. Esse, quis non explicabo consectetur doloremque ex.</p>
+    <div style="background-color: #8a7c9b; padding: 15px; text-align:center; ">
+        <h1> Hyuuga Veículos </h1>
+    </div>
+    <div style="background-color: black;">
+        <ul style="width: 50%; margin: 0 auto; text-align: left;">
+            <li><a class="active" href="#home">logo</a></li>
+            <li><a href="#news">Home</a></li>
+            <li><a href="#contact">Cur</a></li>
+            <li><a href="#news">Novidades</a></li>
+            <li><a href="#about">Cadastro</a></li>
+        </ul>
+    </div>
+    <br>
+
+    <div class="container px-4 px-lg-5">
+        <!-- Heading Row-->
+        <div class="row gx-4 gx-lg-5 align-items-center my-5">
+            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
+            <div class="col-lg-5">
+                <h1 class="font-weight-light">Business Name or Tagline</h1>
+                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+                <a class="btn btn-primary" href="#!">Call to Action!</a>
+            </div>
+        </div>
+        <!-- Content Row-->
+        <div class="row gx-4 gx-lg-5">
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card One</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card Two</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card Three</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                </div>
             </div>
         </div>
     </div>
-
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+        <div class="container px-4 px-lg-5">
+            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
+        </div>
+    </footer>
 </body>
 
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery-3.6.0.min.js "></script>
+<script src="js/bootstrap.min.js "></script>
 
 </html>
