--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title> PW - bootstrap </title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_home.css">
 </head>
 
 <body>
@@ -66,6 +67,49 @@
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="container-fluid ap">
+        <!-- ap = alterear proporção !-->
+        <section class="main">
+
+            <ul class="ch-grid">
+                <li>
+                    <div class="ch-item">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-1"></div>
+                            <div class="ch-info-back">
+                                <h3>Mouse</h3>
+                                <p>by Alexander Shumihin </p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ch-item">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-2"></div>
+                            <div class="ch-info-back">
+                                <h3>You</h3>
+                                <p>by Zoe Ingram</p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="ch-item">
+                        <div class="ch-info">
+                            <div class="ch-info-front ch-img-3"></div>
+                            <div class="ch-info-back">
+                                <h3>Love</h3>
+                                <p>by Eileen Tjan </p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+
+        </section>
     </div>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
