--- a/index-h.html
+++ b/index-h.html
@@ -16,18 +16,21 @@
     <div style="background-color: #8a7c9b; padding: 15px; text-align:center; ">
         <h1> Hyuuga Veículos </h1>
     </div>
-    <div style="background-color: black;">
-        <ul style="width: 50%; margin: 0 auto; text-align: left;">
-            <li><a class="active" href="#home">logo</a></li>
-            <li><a href="#news">Home</a></li>
-            <li><a href="#contact">Cur</a></li>
-            <li><a href="#news">Novidades</a></li>
-            <li><a href="#about">Cadastro</a></li>
-        </ul>
-    </div>
-    <br>
-
-    <div class="container px-4 px-lg-5">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#!">Start Bootstrap</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item bg-primary"><a class="nav-link" href="index-h.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index-n.html">Novidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index-c.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index-i.html">Informações</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
         <!-- Heading Row-->
         <div class="row gx-4 gx-lg-5 align-items-center my-5">
             <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
@@ -110,6 +113,7 @@
             </ul>
 
         </section>
+    </div>
     </div>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
