--- a/index/index-n.html
+++ b/index/index-n.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> PW - bootstrap </title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style_home.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style_home.css">
 </head>
 
 <body>
@@ -22,10 +22,10 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item bg-primary"><a class="nav-link" href="index-h.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index-n.html">Novidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index-c.html">Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="index-i.html">Informações</a></li>
+                    <li class="nav-item bg-primary"><a class="nav-link" href="../index/index-h.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index/index-n.html">Novidades</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index/index-c.html">Contato</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../index/index-i.html">Informações</a></li>
                 </ul>
             </div>
         </div>
@@ -33,9 +33,10 @@
 
     <div class="container">
 
+
         <br><br><br><br>
 
-        <h1> Contato </h1>
+        <h1> Novidades </h1>
 
         <br><br><br><br>
 
@@ -49,7 +50,7 @@
     </footer>
 </body>
 
-<script src="js/jquery-3.6.0.min.js "></script>
-<script src="js/bootstrap.min.js "></script>
+<script src="../js/jquery-3.6.0.min.js "></script>
+<script src="../js/bootstrap.min.js "></script>
 
 </html>
