--- a/index/index-c.html
+++ b/index/index-c.html
@@ -24,7 +24,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item bg-primary">
                         <a class="nav-link" href="../index/index-h.html">
-                            <!--icon-->Home</a>
+                            <!--icon-->Hoe</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index/index-n.html">
