--- a/index/index-c.html
+++ b/index/index-c.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style_home.css">
+    <link rel="stylesheet" href="../css/style_c.css">
 </head>
 
 <body>
@@ -43,11 +44,11 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="contair">
 
         <br><br><br><br>
 
-        <h1> Contato </h1>
+
         <br><br><br><br>
 
     </div>
