--- a/index/index-n.html
+++ b/index/index-n.html
@@ -32,11 +32,34 @@
     </nav>
 
     <div class="container">
+        <br> <br> <br>
+        <h1>Novidades do meio de Dezemvolvimento de Sistemas</h1>
 
-
-        <br><br><br><br>
-
-        <h1> Novidades </h1>
+        <div class="container">
+            <div class="row">
+                <div class="col align-self-start"> <br>
+                    <h1>Novidade 1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
+                    <img src="../images/im1.jpg" alt="">
+                </div>
+                <div class="col align-self-center"><br><br>
+                    <h1>Novidade 2</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
+                    <img src="../images/im1.jpg" alt="">
+                </div>
+                <div class="col align-self-end"><br><br><br><br>
+                    <h1>Novidade 3</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
+                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
+                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
+                    <img src="../images/im1.jpg" alt="">
+                </div>
+            </div>
+        </div>
 
         <br><br><br><br>
 
