--- a/index/index-c.html
+++ b/index/index-c.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> PW - bootstrap </title>
+    <title> Etec - DS </title>
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style_home.css">
@@ -15,7 +15,7 @@
 <body>
 
     <div style="background-color: #8a7c9b; padding: 15px; text-align:center; ">
-        <h1> Hyuuga Veículos </h1>
+        <h1> Desenvolvimento de Sistemas </h1>
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
