--- a/index/index-n.html
+++ b/index/index-n.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../css/bootstrap.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style_home.css">
+    <link rel="stylesheet" href="../css/style_n.css">
 </head>
 
 <body>
@@ -33,35 +34,49 @@
 
     <div class="container">
         <br> <br> <br>
-        <h1>Novidades do meio de Dezemvolvimento de Sistemas</h1>
+        <h1 class="text-center">Novidades </h1>
 
-        <div class="container">
-            <div class="row">
-                <div class="col align-self-start"> <br>
-                    <h1>Novidade 1</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
-                    <img src="../images/im1.jpg" alt="">
+        <br>
+
+        <div class="row gx-4 gx-lg-5"><br>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card One</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a class="col" href="#!"><img class="img" src="../images/im1.jpg" alt=""></a>
+                    </div>
                 </div>
-                <div class="col align-self-center"><br><br>
-                    <h1>Novidade 2</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
-                    <img src="../images/im1.jpg" alt="">
+            </div>
+            <div class="col-md-4 mb-5"><br>
+                <div class="col-12 col-sm-6 col-md-6 d-none d-sm-block"><br></div>
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card Two</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a class="" href="#!"><img class="img" src="../images/im1.jpg" alt=""></a>
+                    </div>
                 </div>
-                <div class="col align-self-end"><br><br><br><br>
-                    <h1>Novidade 3</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, voluptate maiores quasi ratione sed molestias possimus sequi nesciunt totam? Facilis reiciendis excepturi sunt eos quod doloremque praesentium at amet assumenda! Lorem ipsum
-                        dolor sit amet consectetur adipisicing elit. Rem sint cumque ex, reprehenderit ipsam, dolorem incidunt similique beatae corporis tenetur sunt sequi quod molestiae molestias libero doloribus blanditiis. Dicta, accusantium?Lorem
-                        ipsum dolor sit amet, consectetur adipisicing elit. Odit placeat inventore velit dolorum corrupti minima possimus, eum reprehenderit consectetur sequi tempora quis quisquam dicta officia, vel a quod. Consequuntur, alias?</p>
-                    <img src="../images/im1.jpg" alt="">
+            </div>
+            <div class="col-md-4 mb-5"><br><br>
+                <div class="col-12 col-sm-6 col-md-6 d-none d-sm-block"><br><br></div>
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Card Three</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="#!"><img class="img" src="../images/im1.jpg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <br><br><br><br>
+        <br> <br> <br> <br>
 
     </div>
 
