--- a/index/index-n.html
+++ b/index/index-n.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/style_home.css">
     <link rel="stylesheet" href="../css/style_n.css">
+
+    <!-- CSS Carosel -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/animate.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/media-queries.css">
+
 </head>
 
 <body>
@@ -17,7 +26,6 @@
     <div style="background-color: #8a7c9b; padding: 15px; text-align:center; ">
         <h1> Desenvolvimento de Sistemas </h1>
     </div>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#!">Start Bootstrap</a>
@@ -34,11 +42,71 @@
     </nav>
 
     <div class="container">
-        <br> <br> <br>
+        <br>
         <h1 class="text-center">Novidades </h1>
 
         <br>
 
+        <!-- Top content -->
+        <div class="top-content">
+            <div class="row no-gutters">
+                <div class="col">
+                    <div id="carousel-example" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example" data-slide-to="1"></li>
+                            <li data-target="#carousel-example" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="../assets/img/backgrounds/1.jpg" class="d-block w-100" alt="img1">
+                                <div class="carousel-caption">
+                                    <h1 class="wow fadeInLeftBig">Carousel Template with Bootstrap 4</h1>
+                                    <div class="description wow fadeInUp">
+                                        <p>
+                                            This is a free Carousel template made with the Bootstrap 4 framework. Check it out now. Download it, customize and use it as you like!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/backgrounds/2.jpg" class="d-block w-100" alt="img2">
+                                <div class="carousel-caption">
+                                    <h1 class="wow fadeInLeftBig">This is Slide 2 of our Carousel</h1>
+                                    <div class="description wow fadeInUp">
+                                        <p>
+                                            You can download this free template on <a href="https://azmind.com" target="_blank">AZMIND</a>.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="../assets/img/backgrounds/3.jpg" class="d-block w-100" alt="img3">
+                                <div class="carousel-caption">
+                                    <h1 class="wow fadeInLeftBig">This is Slide 3, the Last One</h1>
+                                    <div class="description wow fadeInUp">
+                                        <p>
+                                            After you download it, you can customize and use it as you like. That's great!
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carousel-example" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carousel-example" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <br>
+        <br>
 
 
         <div class="row gx-4 gx-lg-5"><br>
@@ -93,5 +161,15 @@
 
 <script src="../js/jquery-3.6.0.min.js "></script>
 <script src="../js/bootstrap.min.js "></script>
+
+<!-- Javascript Carosel -->
+<script src="../assets/js/jquery-3.3.1.min.js"></script>
+<script src="../assets/js/jquery-migrate-3.0.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+<script src="../assets/js/jquery.backstretch.min.js"></script>
+<script src="../assets/js/wow.min.js"></script>
+<script src="../assets/js/waypoints.min.js"></script>
+<script src="../assets/js/scripts.js"></script>
 
 </html>
