--- a/index/index-c.html
+++ b/index/index-c.html
@@ -32,12 +32,12 @@
                             <!--icon-->Novidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-c.html">
-                            <!--icon-->Contato</a>
+                        <a class="nav-link" href="../index/index-i.html">
+                            <!--icon-->Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-i.html">
-                            <!--icon-->Informações</a>
+                        <a class="nav-link" href="../index/index-c.html">
+                            <!--icon-->Contato</a>
                     </li>
                 </ul>
             </div>
