--- a/index/index-i.html
+++ b/index/index-i.html
@@ -22,10 +22,20 @@
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item bg-primary"><a class="nav-link" href="../index/index-h.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index/index-n.html">Novidades</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index/index-c.html">Contato</a></li>
-                    <li class="nav-item"><a class="nav-link" href="../index/index-i.html">Informações</a></li>
+                    <a class="nav-link" href="../index/index-h.html">
+                        <!--icon-->Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index/index-n.html">
+                            <!--icon-->Novidades</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index/index-i.html">
+                            <!--icon-->Sobre</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index/index-c.html">
+                            <!--icon-->Contato</a>
                 </ul>
             </div>
         </div>
