--- a/index/index-h.html
+++ b/index/index-h.html
@@ -30,7 +30,7 @@
                             <!--icon-->Novidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-i.html">
+                        <a class="nav-link" href="../index/index-s.html">
                             <!--icon-->Sobre</a>
                     </li>
                     <li class="nav-item">
