--- a/index/index-n.html
+++ b/index/index-n.html
@@ -40,7 +40,7 @@
                             <!--icon-->Novidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-i.html">
+                        <a class="nav-link" href="../index/index-s.html">
                             <!--icon-->Sobre</a>
                     </li>
                     <li class="nav-item">
@@ -58,7 +58,7 @@
         <br>
 
         <!-- Top content -->
-        <div class="top-content">
+        <div class="top-content bc">
             <div class="row no-gutters">
                 <div class="col">
                     <div id="carousel-example" class="carousel slide" data-ride="carousel">
