--- a/index/index-c.html
+++ b/index/index-c.html
@@ -32,7 +32,7 @@
                             <!--icon-->Novidades</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-i.html">
+                        <a class="nav-link" href="../index/index-s.html">
                             <!--icon-->Sobre</a>
                     </li>
                     <li class="nav-item">
@@ -48,66 +48,35 @@
         <br><br><br><br>
         <div class="row">
             <div class="col-6">
-                <form>
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect1">Example select</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlSelect2">Example multiple select</label>
-                        <select multiple class="form-control" id="exampleFormControlSelect2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-                </form>
+
+                <img src="../images/im1.jpg" alt=""><br><br><img src="../images/im1.jpg" alt=""><br><br><img src="../images/im1.jpg" alt="">
+
             </div>
             <div class="col-6">
-                <form>
+                <h1 class="text-center"> Formulário de Contato</h1>
+                <form action="">
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label>Nome</label>
+                        <input id="" class="form-control" type="text" name="">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect1">Example select</label>
-                        <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    </select>
+                        <label>E-mail</label>
+                        <input id="" class="form-control" type="emeil" name="">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlSelect2">Example multiple select</label>
-                        <select multiple class="form-control" id="exampleFormControlSelect2">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                    </select>
+                        <label>Assunto</label>
+                        <select name="" id="" class="form-control">
+                            <option value="">Reclamação</option>
+                            <option value="">Sugestão</option>
+                            <option value="">Elogio</option>
+                        </select>
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <label>Mensagem</label>
+                        <textarea name="" id="" cols="30" rows="10" class="form-control"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button class="btn btn-personal"> <i class="fas fa-paper-plane"></i> Enviar</button>
                     </div>
                 </form>
             </div>
