--- a/index/index-h.html
+++ b/index/index-h.html
@@ -13,29 +13,38 @@
 
 <body>
 
-    <div style="background-color: #8a7c9b; padding: 15px; text-align:center; ">
+    <div style="background-color: #b1070e; color: white; padding: 15px; text-align:center; font-family:georgia ;  ">
         <h1> Desenvolvimento de Sistemas </h1>
     </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark na ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
+            <a class="navbar-brand" href="#!"><img class="img-logo" src="../images/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <a class="nav-link" href="../index/index-h.html">
-                        <!--icon-->Home</a>
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
+                    <li class="nav-item nl">
+                        <a class="nav-link" href="../index/index-h.html">
+                            <h5> <img src="../images/house-fill.svg" alt=""> Home</h5>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index/index-n.html">
-                            <!--icon-->Novidades</a>
+                            <!--icon-->
+                            <h5> <img src="../images/newspaper.svg" alt=""> Novidades</h5>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index/index-s.html">
-                            <!--icon-->Sobre</a>
+                            <!--icon-->
+                            <h5> <img src="../images/person-lines-fill.svg" alt=""> Sobre</h5>
+                        </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index/index-c.html">
-                            <!--icon-->Contato</a>
+                            <!--icon-->
+                            <h5> <img src="../images/file-person-fill.svg" alt=""> Contato</h5>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
