--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Etec - DS </title>
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/style_home.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style_home.css">
 </head>
 
 <body>
@@ -23,26 +23,26 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
                     <li class="nav-item nl">
-                        <a class="nav-link" href="../index/index-h.html">
-                            <h5> <img src="../images/house-fill.svg" alt=""> Home</h5>
+                        <a class="nav-link" href="index.html">
+                            <h5> <img src="images/house-fill.svg" alt=""> Home</h5>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-n.html">
+                        <a class="nav-link" href="index/index-n.html">
                             <!--icon-->
-                            <h5> <img src="../images/newspaper.svg" alt=""> Novidades</h5>
+                            <h5> <img src="images/newspaper.svg" alt=""> Novidades</h5>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-s.html">
+                        <a class="nav-link" href="index/index-s.html">
                             <!--icon-->
-                            <h5> <img src="../images/person-lines-fill.svg" alt=""> Sobre</h5>
+                            <h5> <img src="images/person-lines-fill.svg" alt=""> Sobre</h5>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-c.html">
+                        <a class="nav-link" href="index/index-c.html">
                             <!--icon-->
-                            <h5> <img src="../images/file-person-fill.svg" alt=""> Contato</h5>
+                            <h5> <img src="images/file-person-fill.svg" alt=""> Contato</h5>
                         </a>
                     </li>
                 </ul>
@@ -142,7 +142,7 @@
     </footer>
 </body>
 
-<script src="../js/jquery-3.6.0.min.js "></script>
-<script src="../js/bootstrap.min.js "></script>
+<script src="js/jquery-3.6.0.min.js "></script>
+<script src="js/bootstrap.min.js "></script>
 
 </html>
