--- a/index/index-s.html
+++ b/index/index-s.html
@@ -29,12 +29,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
                     <li class="nav-item nl">
-                        <a class="nav-link" href="../index/index-h.html">
+                        <a class="nav-link" href="../index/index.html">
                             <h5> <img src="../images/house-fill.svg" alt=""> Home</h5>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-n.html">
+                        <a class="nav-link" href="index-n.html">
                             <!--icon-->
                             <h5> <img src="../images/newspaper.svg" alt=""> Novidades</h5>
                         </a>
