--- a/index/index-n.html
+++ b/index/index-n.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="../css/style_n.css">
 
     <!-- CSS Carosel -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" int egrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/css/animate.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/media-queries.css">
@@ -33,12 +31,12 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
                     <li class="nav-item nl">
-                        <a class="nav-link" href="../index/index-h.html">
+                        <a class="nav-link" href="../index/index.html">
                             <h5> <img src="../images/house-fill.svg" alt=""> Home</h5>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../index/index-n.html">
+                        <a class="nav-link" href="index-n.html">
                             <!--icon-->
                             <h5> <img src="../images/newspaper.svg" alt=""> Novidades</h5>
                         </a>
@@ -182,13 +180,9 @@
 <script src="../js/bootstrap.min.js "></script>
 
 <!-- Javascript Carosel -->
-<script src="../assets/js/jquery-3.3.1.min.js"></script>
-<script src="../assets/js/jquery-migrate-3.0.0.min.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<script src="../assets/js/jquery.backstretch.min.js"></script>
-<script src="../assets/js/wow.min.js"></script>
-<script src="../assets/js/waypoints.min.js"></script>
-<script src="../assets/js/scripts.js"></script>
+
 
 </html>
