--- a/index/index-n.html
+++ b/index/index-n.html
@@ -31,7 +31,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
                     <li class="nav-item nl">
-                        <a class="nav-link" href="../index/index.html">
+                        <a class="nav-link" href="index.html">
                             <h5> <img src="../images/house-fill.svg" alt=""> Home</h5>
                         </a>
                     </li>
