--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark na ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#!"><img class="img-logo" src="../images/logo.png" alt=""></a>
+            <a class="navbar-brand" href="#!"><img class="img-logo" src="images/logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
