--- a/index.html
+++ b/index.html
@@ -24,25 +24,33 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 na ">
                     <li class="nav-item nl">
                         <a class="nav-link" href="index.html">
-                            <h5> <img src="images/house-fill.svg" alt=""> Home</h5>
+                            <h5> <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-house-door-fill ci" viewBox="0 0 20 20">
+                                <path d="M6.5 14.5v-3.505c0-.245.25-.495.5-.495h2c.25 0 .5.25.5.5v3.5a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4a.5.5 0 0 0 .5-.5z"/>
+                                </svg>Home</h5>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index/index-n.html">
-                            <!--icon-->
-                            <h5> <img src="images/newspaper.svg" alt=""> Novidades</h5>
+                            <h5><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-newspaper ci" viewBox="0 0 20 20">
+                                <path d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5v-11zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5H12z"/>
+                                <path d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z"/>
+                                </svg>Informações</h5>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index/index-s.html">
-                            <!--icon-->
-                            <h5> <img src="images/person-lines-fill.svg" alt=""> Sobre</h5>
+                            <h5> <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-person ci" viewBox="0 0 20 20">
+                                <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1h8zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H4z"/>
+                                <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+                                </svg>Sobre</h5>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index/index-c.html">
-                            <!--icon-->
-                            <h5> <img src="images/file-person-fill.svg" alt=""> Contato</h5>
+                            <h5> <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-rolodex ci" viewBox="0 0 20 20">
+                                <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+                                <path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1H1Zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1V2Z"/>
+                                </svg>Contato</h5>
                         </a>
                     </li>
                 </ul>
@@ -52,40 +60,71 @@
     <div class="container">
         <!-- Heading Row-->
         <div class="row gx-4 gx-lg-5 align-items-center my-5">
-            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="https://dummyimage.com/900x400/dee2e6/6c757d.jpg" alt="..." /></div>
+            <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="images/imgh.png" alt="..." /></div>
             <div class="col-lg-5">
-                <h1 class="font-weight-light">Business Name or Tagline</h1>
+                <h1 class="font-weight-light"> Como se inscrever para o vestibulinho </h1>
                 <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-                <a class="btn btn-primary" href="#!">Call to Action!</a>
+                <a class="btn btn-personal" href="index/index-c.html">Entre em contato!</a>
             </div>
         </div>
         <!-- Content Row-->
+
+        <h1 class="text-center"> Conhecimentos Adiquiridos </h1>
+        <br>
+
         <div class="row gx-4 gx-lg-5">
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card One</h2>
+                        <h2 class="card-title">Pagina na WEB</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
                 </div>
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card Two</h2>
+                        <h2 class="card-title">Banco de Dados</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Analize de Sistemas</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Progamação Mobile</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+                    </div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-5">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <h2 class="card-title">Logica de Progamação</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
                     </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
                 </div>
             </div>
             <div class="col-md-4 mb-5">
                 <div class="card h-100">
                     <div class="card-body">
-                        <h2 class="card-title">Card Three</h2>
+                        <h2 class="card-title">Desenvolvimento de Software</h2>
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
                     </div>
-                    <div class="card-footer"><a class="btn btn-primary btn-sm" href="#!">More Info</a></div>
+                    <div class="card-footer"><a class="btn btn-sm btn-personal" href="index/index-n.html">+ Informações</a></div>
                 </div>
             </div>
         </div>
@@ -93,38 +132,48 @@
 
     <div class="container-fluid ap">
         <!-- ap = alterear proporção !-->
+
+        <h1 class="text-center"> Linguagens de Progamação </h1>
+        <br>
+
         <section class="main">
 
             <ul class="ch-grid">
                 <li>
-                    <div class="ch-item">
+                    <div class="ch-item bp">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-1"></div>
                             <div class="ch-info-back">
-                                <h3>Mouse</h3>
-                                <p>by Alexander Shumihin </p>
+                                <h3>HTML</h3>
+                                <a href="https://pt.wikipedia.org/wiki/HTML">
+                                    <p> + info sobre a linguagem </p>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="ch-item">
+                    <div class="ch-item bp">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-2"></div>
                             <div class="ch-info-back">
-                                <h3>You</h3>
-                                <p>by Zoe Ingram</p>
+                                <h3>CSS</h3>
+                                <a href="https://pt.wikipedia.org/wiki/Cascading_Style_Sheets">
+                                    <p> + info sobre a linguagem </p>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </li>
                 <li>
-                    <div class="ch-item">
+                    <div class="ch-item bp">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-3"></div>
                             <div class="ch-info-back">
-                                <h3>Love</h3>
-                                <p>by Eileen Tjan </p>
+                                <h3>javascript</h3>
+                                <a href="https://pt.wikipedia.org/wiki/JavaScript">
+                                    <p> + info sobre a linguagem </p>
+                                </a>
                             </div>
                         </div>
                     </div>
