--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
 
             <ul class="ch-grid">
                 <li>
-                    <div class="ch-item bp">
+                    <div class="ch-item">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-1"></div>
-                            <div class="ch-info-back">
+                            <div class="ch-info-back bp">
                                 <h3>HTML</h3>
                                 <a href="https://pt.wikipedia.org/wiki/HTML">
                                     <p> + info sobre a linguagem </p>
@@ -153,10 +153,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="ch-item bp">
+                    <div class="ch-item">
                         <div class="ch-info">
                             <div class="ch-info-front ch-img-2"></div>
-                            <div class="ch-info-back">
+                            <div class="ch-info-back bp">
                                 <h3>CSS</h3>
                                 <a href="https://pt.wikipedia.org/wiki/Cascading_Style_Sheets">
                                     <p> + info sobre a linguagem </p>
@@ -166,10 +166,10 @@
                     </div>
                 </li>
                 <li>
-                    <div class="ch-item bp">
-                        <div class="ch-info">
+                    <div class="ch-item ">
+                        <div class="ch-info ">
                             <div class="ch-info-front ch-img-3"></div>
-                            <div class="ch-info-back">
+                            <div class="ch-info-back bp">
                                 <h3>javascript</h3>
                                 <a href="https://pt.wikipedia.org/wiki/JavaScript">
                                     <p> + info sobre a linguagem </p>
@@ -184,9 +184,9 @@
     </div>
     </div>
     <!-- Footer-->
-    <footer class="py-5 bg-dark">
-        <div class="container px-4 px-lg-5">
-            <p class="m-0 text-center text-white">Copyright &copy; Gisely Fernanda Dias Pereira</p>
+    <footer style="background-color: #b1070e; color: white; padding: 15px; text-align:center; font-family:georgia ; class=" py-5 bg-dark ">
+        <div class="container px-4 px-lg-5 ">
+            <p class="m-0 text-center text-white ">Copyright &copy; Gisely Fernanda Dias Pereira 2021 </p>
         </div>
     </footer>
 </body>
