--- a/index/index-s.html
+++ b/index/index-s.html
@@ -40,7 +40,7 @@
                             <h5><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-newspaper ci" viewBox="0 0 20 20">
                                 <path d="M0 2.5A1.5 1.5 0 0 1 1.5 1h11A1.5 1.5 0 0 1 14 2.5v10.528c0 .3-.05.654-.238.972h.738a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 1 1 0v9a1.5 1.5 0 0 1-1.5 1.5H1.497A1.497 1.497 0 0 1 0 13.5v-11zM12 14c.37 0 .654-.211.853-.441.092-.106.147-.279.147-.531V2.5a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0-.5.5v11c0 .278.223.5.497.5H12z"/>
                                 <path d="M2 3h10v2H2V3zm0 3h4v3H2V6zm0 4h4v1H2v-1zm0 2h4v1H2v-1zm5-6h2v1H7V6zm3 0h2v1h-2V6zM7 8h2v1H7V8zm3 0h2v1h-2V8zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1zm-3 2h2v1H7v-1zm3 0h2v1h-2v-1z"/>
-                                </svg>Novidades</h5>
+                                </svg>Informações</h5>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -75,23 +75,23 @@
                 <p class="text-center">
                     gisely.pereira@etec.sp.gov.br
                 </p>
-                <p>This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
+                <p class="text-center">This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
             </div>
             <div class="col-lg-7 d-none d-sm-block">
                 <div class="main">
                     <div id="fc-slideshow" class="fc-slideshow">
                         <ul class="fc-slides">
-                            <li class="bg-white"><img src="../images/1.jpg" />
-                                <h3>Hot</h3>
+                            <li><img src="https://cdn.pixabay.com/photo/2020/11/15/06/18/instagram-logo-5744708_1280.png" class="is" />
+                                <h3>Gisely_Fernanda</h3>
                             </li>
-                            <li><img src="../images/2.jpg" />
-                                <h3>Cold</h3>
+                            <li><img src="https://www.freeiconspng.com/uploads/facebook-f-logo-transparent-facebook-f-22.png" class="is" />
+                                <h3>Gisely_Fernanda</h3>
                             </li>
-                            <li><img src="../images/3.jpg" />
-                                <h3>Light</h3>
+                            <li><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" class="is" />
+                                <h3>Gisely_Fernanda</h3>
                             </li>
-                            <li><img src="../images/4.jpg" />
-                                <h3>Dark</h3>
+                            <li><img src="https://www.freepnglogos.com/uploads/twitter-logo-png/twitter-logo-vector-png-clipart-1.png" class="is" />
+                                <h3>Gisely_Fernanda</h3>
                             </li>
                         </ul>
                     </div>
@@ -102,16 +102,16 @@
     </div>
 
     <!-- Footer-->
-    <footer class="py-5 bg-dark ">
+    <footer style="background-color: #b1070e; color: white; padding: 15px; text-align:center; font-family:georgia ; class=" py-5 bg-dark ">
         <div class="container px-4 px-lg-5 ">
-            <p class="m-0 text-center text-white ">Copyright &copy; Your Website 2021</p>
+            <p class="m-0 text-center text-white ">Copyright &copy; Gisely Fernanda Dias Pereira 2021</p>
         </div>
     </footer>
 </body>
 
 <script src="../js/jquery-3.6.0.min.js "></script>
 <script src="../js/bootstrap.min.js "></script>
-<script src="../js/jquery.flipshow.js"></script>
+<script src="../js/jquery.flipshow.js "></script>
 <script>
     $(function() {
 
